[MIG] project_scrum: Migration to 18.0
Update as per suggestions

--- a/project_scrum/views/project_views.xml
+++ b/project_scrum/views/project_views.xml
@@ -46,7 +46,7 @@
         <field name="model">project.project</field>
         <field name="inherit_id" ref="project.view_project_kanban" />
         <field name="arch" type="xml">
-            <xpath expr="//div[hasclass('o_kanban_manage_view')]" position="inside">
+            <xpath expr="//div[@name='card_menu_view']" position="inside">
                 <div role="menuitem" groups="project.group_project_manager">
                     <a name="action_sprints" type="object">Sprints</a>
                 </div>
