--- a/project_scrum/views/project_sprint_views.xml
+++ b/project_scrum/views/project_sprint_views.xml
@@ -10,15 +10,17 @@
                         name="action_start"
                         string="Start"
                         type="object"
-                        states="draft"
+                        invisible="state != 'draft'"
                         class="btn btn-primary"
+                        groups="project.group_project_manager"
                     />
                     <button
                         name="action_done"
                         string="Done"
                         type="object"
-                        states="in_progress"
+                        invisible="state != 'in_progress'"
                         class="btn btn-primary"
+                        groups="project.group_project_manager"
                     />
                     <field
                         name="state"
@@ -46,44 +48,44 @@
                     </div>
                     <label for="name" class="oe_edit_only " />
                     <h1>
-                        <field name="name" />
+                        <field name="name" readonly="state == 'done'" />
                     </h1>
                     <group>
                         <group>
-                            <field name="user_ids" widget="many2many_avatar_user" />
-                            <field name="project_id" />
+                            <field
+                                name="user_ids"
+                                widget="many2many_avatar_user"
+                                readonly="state == 'done'"
+                            />
+                            <field name="project_id" readonly="state == 'done'" />
                         </group>
                         <group>
-                            <field name="date_start" />
-                            <field name="date_option" />
+                            <field name="date_start" readonly="state == 'done'" />
+                            <field name="date_option" readonly="state == 'done'" />
                             <field
                                 name="date_end"
-                                attrs="{'readonly' : [('date_option', '!=', 'custom')]}"
+                                readonly="date_option != 'custom' or state == 'done'"
                                 force_save="1"
                             />
                         </group>
-                        <field name="description" />
+                        <field name="description" readonly="state == 'done'" />
                     </group>
                 </sheet>
-                <div class="oe_chatter">
-                    <field name="message_follower_ids" widget="mail_followers" />
-                    <field name="activity_ids" widget="mail_activity" />
-                    <field name="message_ids" widget="mail_thread" />
-                </div>
+                <chatter />
             </form>
         </field>
     </record>
     <record id="project_sprint_view_tree" model="ir.ui.view">
-        <field name="name">project.sprint.view.tree</field>
+        <field name="name">project.sprint.view.list</field>
         <field name="model">project.sprint</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name" />
                 <field name="project_id" />
                 <field name="date_start" />
                 <field name="date_end" />
                 <field name="state" />
-            </tree>
+            </list>
         </field>
     </record>
     <record id="project_sprint_view_search" model="ir.ui.view">
@@ -151,7 +153,7 @@
     <record id="project_sprint_action" model="ir.actions.act_window">
         <field name="name">Sprints</field>
         <field name="res_model">project.sprint</field>
-        <field name="view_mode">timeline,tree,form</field>
+        <field name="view_mode">timeline,list,form</field>
     </record>
     <menuitem
         id="project_sprint_menu"
