--- a/project_scrum/views/project_task_views.xml
+++ b/project_scrum/views/project_task_views.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="project_task_inherit_form_view" model="ir.ui.view">
-        <field name="name">project.task.inherit.form.view</field>
+    <record id="quick_create_task_form" model="ir.ui.view">
+        <field name="name">project.task.inherit.quick_create.form.view</field>
         <field name="model">project.task</field>
-        <field name="inherit_id" ref="project.view_task_form2" />
+        <field name="inherit_id" ref="project.quick_create_task_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='project_id']" position="after">
                 <field name="sprint_id" />
             </xpath>
         </field>
     </record>
+    <record id="project_task_inherit_form_view" model="ir.ui.view">
+        <field name="name">project.task.inherit.form.view</field>
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project.view_task_form2" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='tag_ids']" position="after">
+                <field name="sprint_id" />
+            </xpath>
+        </field>
+    </record>
     <record id="project_task_inherit_tree_view" model="ir.ui.view">
-        <field name="name">project.task.inherit.tree.view</field>
+        <field name="name">project.task.inherit.list.view</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_tree2" />
         <field name="arch" type="xml">
@@ -51,6 +61,15 @@
                 <attribute name="default_group_by">sprint_id</attribute>
                 <attribute name="event_open_popup">False</attribute>
                 <attribute name="dependency_arrows">False</attribute>
+            </xpath>
+        </field>
+    </record>
+    <record id="view_task_kanban" model="ir.ui.view">
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project.view_task_kanban" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_id']" position="after">
+                <field name="sprint_id" />
             </xpath>
         </field>
     </record>
