--- a/project_version/views/project_task_views.xml
+++ b/project_version/views/project_task_views.xml
@@ -13,6 +13,22 @@
             </field>
         </field>
     </record>
+
+    <record id="view_task_tree2" model="ir.ui.view">
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project.view_task_tree2" />
+        <field name="arch" type="xml">
+            <field name="user_ids" position="after">
+                <field
+                    name="version_id"
+                    options="{'no_create': True}"
+                    domain="[('project_id', '=', project_id)]"
+                    optional="hide"
+                />
+            </field>
+        </field>
+    </record>
+
     <record id="project_task_search" model="ir.ui.view">
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_search_form" />
