--- a/project_task_name_with_id/views/project_task_views.xml
+++ b/project_task_name_with_id/views/project_task_views.xml
@@ -16,21 +16,19 @@
         <field name="inherit_id" ref="project.view_task_kanban" />
         <field name="arch" type="xml">
             <!-- Show display_name (with id) instead of just name. -->
-            <xpath
-                expr="//strong[hasclass('o_kanban_record_title')]"
-                position="attributes"
-            >
+            <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
-            <xpath expr="//strong[hasclass('o_kanban_record_title')]" position="after">
-                <strong class="o_kanban_record_title">
+            <xpath expr="//field[@name='name']" position="after">
+                <field name="active" invisible="1" />
+                <span class="fw-bold fs-5">
                     <s t-if="!record.active.raw_value">
                         <field name="display_name" widget="name_with_subtask_count" />
                     </s>
                     <t t-else="">
                         <field name="display_name" widget="name_with_subtask_count" />
                     </t>
-                </strong>
+                </span>
             </xpath>
         </field>
     </record>
@@ -42,7 +40,7 @@
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.project_sharing_project_task_view_tree" />
         <field name="arch" type="xml">
-            <xpath expr="field[@name='name']" position="before">
+            <xpath expr="//field[@name='name']" position="before">
                 <field name="id" optional="show" />
             </xpath>
         </field>
@@ -56,21 +54,18 @@
         />
         <field name="arch" type="xml">
             <!-- Show display_name (with id) instead of just name. -->
-            <xpath
-                expr="//strong[hasclass('o_kanban_record_title')]"
-                position="attributes"
-            >
+            <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
-            <xpath expr="//strong[hasclass('o_kanban_record_title')]" position="after">
-                <strong class="o_kanban_record_title">
+            <xpath expr="//field[@name='name']" position="after">
+                <span class="fw-bold fs-5">
                     <s t-if="!record.active.raw_value">
                         <field name="display_name" widget="name_with_subtask_count" />
                     </s>
                     <t t-else="">
                         <field name="display_name" widget="name_with_subtask_count" />
                     </t>
-                </strong>
+                </span>
             </xpath>
         </field>
     </record>
@@ -82,7 +77,7 @@
             ref="project.project_sharing_project_task_view_search"
         />
         <field name="arch" type="xml">
-            <xpath expr="field[@name='name']" position="attributes">
+            <xpath expr="//field[@name='name']" position="attributes">
                 <attribute
                     name="filter_domain"
                 >['|', ('name', 'ilike', self), ('id', 'ilike', self)]</attribute>
